another div tag for no reason

--- a/kodehode.html
+++ b/kodehode.html
@@ -15,7 +15,10 @@ hei det er test
 <ul>
 <li>item 1</li>
 <li>item 2 </li>
-<li>item 3
-     </li>
+<li>item 3</li>
 
+
+
+
+<div> another div tag for no reason </div>
     </html>
